Resource Selector - Fix pagination issue, uppy upload z-index & improve resource selection process (contained image & arrow keys)

--- a/app/assets/stylesheets/integral/backend.scss
+++ b/app/assets/stylesheets/integral/backend.scss
@@ -62,7 +62,7 @@ img {
   max-width: 100%;
 }
 
-.uppy-Dashboard--modal {
+body > .uppy-Root, .uppy-Dashboard--modal {
   z-index: $zindex-modal !important;
 }
 
