--- a/app/assets/stylesheets/integral/backend/components/_resource-selector.scss
+++ b/app/assets/stylesheets/integral/backend/components/_resource-selector.scss
@@ -14,13 +14,46 @@
 
   &-sidebar {
     padding: $spacer;
-    background-color: rgba(212, 223, 239, 0.2)
+    background-color: rgba(212, 223, 239, 0.2);
+    .title, .description {
+      overflow-wrap: break-word;
+    }
   }
-  // &-sidebar-img {
-  // }
+  &-sidebar-img {
+    width: 100%;
+    height: 250px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
 
   &-placeholder {
     display: none;
+  }
+  &-item-title {
+    position: absolute;
+    bottom: 0;
+    left: .25rem;
+    z-index: 1;
+    color: white;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-shadow: 0 1px 0 black;
+    font-size: 14px;
+    width: 100%;
+  }
+  &-item-img {
+    filter: brightness(0.7);
+    img {
+      position: inherit;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 1;
+    }
   }
   &-item {
     position: relative;
@@ -44,6 +77,12 @@
     &.selected {
       outline: 2px solid $primary;
       border: 2px solid $white;
+      .resource-selector-item-title {
+        display: none;
+      }
+      .resource-selector-item-img {
+        filter: none;
+      }
       // &:before {
       //   @include font-awesome('\f00c')
       //   position: absolute
@@ -60,13 +99,6 @@
       //   font-size: 0.9em
       //   z-index: 2
       // }
-    }
-    img {
-      position: inherit;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 1;
     }
   }
 }
